chore(odds): verbose prewindow sample (top-3) [SENTINEL_FETCH_ODDS_SAMPLE]

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,3 +23,29 @@
 [functions."autopick-vip-run2-background"]
   node_bundler = "zisi"
   included_files = ["_lib/autopick-vip-nuevo-impl.cjs","netlify/functions/_lib/autopick-vip-nuevo-impl.cjs"]
+[functions."diag-lib-scan"]
+  node_bundler = "zisi"
+  included_files = ["_lib/**","netlify/functions/_lib/**"]
+[functions."diag-match-fixture"]
+  node_bundler = "zisi"
+  included_files = [
+    "tests/matching-fixtures/**",
+    "_lib/match-normalize.cjs",
+    "netlify/functions/_lib/match-normalize.cjs"
+  ]
+[functions."diag-match-batch"]
+  node_bundler = "zisi"
+  included_files = [
+    "tests/matching-fixtures/**",
+    "_lib/match-normalize.cjs",
+    "netlify/functions/_lib/match-normalize.cjs"
+  ]
+[functions."diag-match-compare"]
+  node_bundler = "zisi"
+  included_files = [
+  "tests/matching-fixtures/**",
+  "_lib/match-compare.cjs",
+  "_lib/match-normalize.cjs",
+  "netlify/functions/_lib/match-compare.cjs",
+  "netlify/functions/_lib/match-normalize.cjs"
+]
