chore(netlify): bundle all _lib/*.cjs so impl can require enrich.cjs & helpers

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,4 +10,4 @@
 
 [functions]
   # Anclamos el impl para que esté presente en /.netlify/functions del deploy
-  included_files = ["netlify/functions/_lib/autopick-vip-nuevo-impl.cjs"]
+  included_files = ["netlify/functions/_lib/*.cjs"]
