chore: ignore netlify-dev artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ netlify/functions.bak.*/
 netlify/functions/_lib/*.bak*
 netlify/functions/_lib/*lazy*
 scripts/smoke-functions.js.*[0-9]*
+.netlify-dev.log
+.netlify-dev.pid
