--- a/netlify.toml
+++ b/netlify.toml
@@ -2,38 +2,19 @@
   command = "npm run build || echo 'no build step'"
   functions = "netlify/functions"
 
+[functions]
+  node_bundler = "esbuild"
+  included_files = ["netlify/functions/_lib/*.cjs", "netlify/functions/send.cjs"]
+  external_node_modules = ["openai","@supabase/supabase-js","node-fetch","whatwg-url","tr46","webidl-conversions"]
+
 [[redirects]]
   from = "/api/window"
   to   = "/.netlify/functions/window-log"
   status = 200
   force = true
 
-[functions]
-included_files = ["node_modules/openai/**", "node_modules/node-fetch/**", "node_modules/@supabase/**", "netlify/functions/_lib/*.cjs"]
-external_node_modules = ["openai","@supabase/supabase-js","node-fetch","whatwg-url","tr46","webidl-conversions"]
-
-[functions."autopick-vip-run2"]
-  included_files = ["netlify/functions/_lib/**","netlify/functions/send.cjs"]
-  external_node_modules = ["openai","node-fetch","whatwg-url","tr46","webidl-conversions"]
-
-[functions."autopick-vip-run2-background"]
-  external_node_modules = ["openai","node-fetch","whatwg-url","tr46","webidl-conversions"]
-
 [functions."cron-run2"]
   schedule = "*/15 * * * *"
-  external_node_modules = ["openai","node-fetch","whatwg-url","tr46","webidl-conversions"]
 
-[functions."cron-run2-now"]
+[functions."cron-match-log"]
   schedule = "*/15 * * * *"
-  external_node_modules = ["openai","node-fetch","whatwg-url","tr46","webidl-conversions"]
-
-# (opcional si tu grep lo usa)
-#[functions."autopick-vip-run3"]
-#  external_node_modules = ["openai","node-fetch","whatwg-url","tr46","webidl-conversions"]
-[build]
-  command = "bash scripts/netlify-entry.sh"
-[functions]
-  node_bundler = "esbuild"
-
-[functions.""]
-  schedule = ""
