chore(netlify): include _lib shims in functions bundle

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,7 @@
   port = 8888
   autoLaunch = false
   publish = "."
+
+[functions]
+directory = "netlify/functions"
+included_files = ["netlify/functions/_lib/**", "_lib/**"]
